--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "palatino", serif, sans-serif;
+  /* font-family: sans-serif; */
 }
 
 html, body, #root {
