Sort by button click complete

--- a/src/components/Table/style.css
+++ b/src/components/Table/style.css
@@ -1,5 +1,10 @@
-.fas {
-  
-    color: rgb(62, 165, 49);
+.fas {  
+  color: #333300;
+  }
 
+
+  
+  .sortBtn {
+    background: #FFFFCC;
+    color: #333300;
   }
