--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,5 @@ html, body, #root {
   margin-bottom:5px;
   height:1px;
   width:100%;
-  border-top:1px solid rgb(62, 165, 49);
+  border-top:1px solid #333300;
  }
