All functions and styling complete

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,13 +3,14 @@
     color: #FFFFCC;
   }
 
- .srchBtn {
+ .clearBtn {
     background: #FFFFCC;
     color: #333300;
  }
 
  .form-control {
     color: #333300;
+    max-width: 160px;
  }
 
 
